// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AppLink /> AppLink passHref 1`] = `
.c0 {
  font-weight: 600;
  font-family: Zilla Slab,-apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  color: #2563eb;
  line-height: 1.5;
}

.c1 {
  -webkit-transition: filter 0.2s ease,opacity 0.2s ease,color 0.3s ease;
  transition: filter 0.2s ease,opacity 0.2s ease,color 0.3s ease;
  color: #2563eb;
}

.c1:hover {
  cursor: pointer;
  -webkit-filter: brightness(80%);
  filter: brightness(80%);
}

<div>
  <a
    class="c0 c1"
    href="/"
  />
</div>
`;

exports[`<AppLink /> AppLink tree 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": .c0 {
  font-weight: 600;
  font-family: Zilla Slab,-apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  color: #2563eb;
  line-height: 1.5;
}

.c1 {
  -webkit-transition: filter 0.2s ease,opacity 0.2s ease,color 0.3s ease;
  transition: filter 0.2s ease,opacity 0.2s ease,color 0.3s ease;
  color: #2563eb;
}

.c1:hover {
  cursor: pointer;
  -webkit-filter: brightness(80%);
  filter: brightness(80%);
}

<body>
    <div>
      <a
        class="c0 c1"
        href="/"
      />
    </div>
  </body>,
  "container": <div>
    <a
      class="sc-bdfBwQ sc-gsTCUz kXyOeL iWpNvF"
      href="/"
    />
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`<AppLink /> color theme dark 1`] = `
.c0 {
  font-weight: 600;
  font-family: Zilla Slab,-apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  color: #60a5fa;
  line-height: 1.5;
}

.c1 {
  -webkit-transition: filter 0.2s ease,opacity 0.2s ease,color 0.3s ease;
  transition: filter 0.2s ease,opacity 0.2s ease,color 0.3s ease;
  color: #60a5fa;
}

.c1:hover {
  cursor: pointer;
  -webkit-filter: brightness(80%);
  filter: brightness(80%);
}

<div>
  <a
    class="c0 c1"
    href="/"
  />
</div>
`;

exports[`<AppLink /> color theme light 1`] = `
.c0 {
  font-weight: 600;
  font-family: Zilla Slab,-apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  color: #2563eb;
  line-height: 1.5;
}

.c1 {
  -webkit-transition: filter 0.2s ease,opacity 0.2s ease,color 0.3s ease;
  transition: filter 0.2s ease,opacity 0.2s ease,color 0.3s ease;
  color: #2563eb;
}

.c1:hover {
  cursor: pointer;
  -webkit-filter: brightness(80%);
  filter: brightness(80%);
}

<div>
  <a
    class="c0 c1"
    href="/"
  />
</div>
`;
